chore: database refactor